feat(git): make the vim default git message editor

--- a/hammers/git/config.org
+++ b/hammers/git/config.org
@@ -27,6 +27,7 @@
 	      pager = less -F -X
 	      excludesfile = ~/.gitignore
 	      whitespace = -trailing-space
+	      editor = vim
       [color]
 	      ui = auto
 
