--- a/hammers/emacs/project.org
+++ b/hammers/emacs/project.org
@@ -23,7 +23,7 @@
 	 ("C-c p s" . projectile-save-project-buffers)
 	 ("C-c p d" . counsel-projectile-find-dir)
 	 ("C-c p c" . projectile-compile-project)
-	 ("C-c p r" . counsel-projectile-rg)
+	 ("C-c p r" . rg-project)
 	 ("C-c p %" . projectile-replace-regexp)
 	 ("C-c p g" . projectile-grep))
 	:config
