--- a/hammers/emacs/editing.org
+++ b/hammers/emacs/editing.org
@@ -509,38 +509,41 @@
 	 (save-match-data
 	   (let* ((cursor (point))
 		  (eol (point-at-eol))
-		  (step 1)
-		  (repeat 1)
 		  (hex-number-re "\\(0[xX]\\)\\([0-9A-Fa-f]+\\)")
-		  (decimal-number-re "\\([0-9]+\\)")
-		  )
+		  (decimal-number-re "\\([0-9]+\\)"))
 	     (let* ((hex-point (progn (goto-char cursor)
-				      (re-search-forward hex-number-re nil t)
-				      (match-beginning 0)))
+				      (if (re-search-forward hex-number-re eol t 1) (match-beginning 0) nil)))
 		    (decimal-point (progn (goto-char cursor)
-					  (re-search-forward decimal-number-re nil t)
-					  (match-beginning 0))))
+					  (if (re-search-forward decimal-number-re eol t 1) (match-beginning 0) nil))))
 	       (if (or hex-point decimal-point)
 		   (let* ((first-number (min (or hex-point eol) (or decimal-point eol)))
 			  (hex-enable (eq hex-point first-number))
-			  (base (if hex-enable 16 10)))
+			  (base (if hex-enable 16 10))
+			  (prompt (if hex-enable "hex:" "number:"))
+			  (step (or (cond
+				     ((listp arg) (cond
+						   ((eq (car arg) 4) (string-to-number (read-string prompt) base))
+						   ((eq (car arg) 16)  (progn
+									 (* (string-to-number (read-string prompt) base) (string-to-number (read-string "repeat:"))
+									    )))))
+				     ((numberp arg) arg)
+				     ((eq arg '-) -1))
+				    1)))
 		     (if hex-enable
 			 (progn
 			   (goto-char cursor)
 			   (re-search-forward hex-number-re nil t)
-			   (message "point %d" (point))
 			   (let* ((number-length (length (match-string 2)))
-				  (answer (+ (string-to-number (match-string 2) base) (* step repeat))))
-			     (replace-match (format (if hex-enable (concat (match-string 1) "%0" (int-to-string number-length)
-									   "X") (concat "%0" (int-to-string number-length)
-											"d")) answer))
-			     (message "point after replace %d" (point))
-			     )
-			   )
+				  (answer (+ (string-to-number (match-string 2) base) step)))
+			     (replace-match (format (concat (match-string 1) "%0" (int-to-string number-length) "X") answer))))
 		       (progn
-			 (message "xxx")))
-		     )
-		 ))))))
+			 (goto-char cursor)
+			 (re-search-forward decimal-number-re nil t)
+			 (let* ((number-length (length (match-string 1)))
+				(answer (+ (string-to-number (match-string 1) base) step)))
+			   (replace-match (format (concat "%0" (int-to-string number-length) "d") answer))
+			   )))
+		     )))))))
 
      (global-set-key (kbd "C-c +") 'm/increment-number-hexadecimal)
    #+END_SRC
