feat(tmux): install urlview for the tmux-urlview

--- a/hammers/brew/brewfile.org
+++ b/hammers/brew/brewfile.org
@@ -110,6 +110,7 @@
       brew 'reattach-to-user-namespace' if OS.mac?
       brew 'tmux'
       brew 'tmuxinator-completion'
+      brew 'urlview'
       # code statictis
       brew 'cloc'
       brew 'fzf'
