--- a/hammers/emacs/snippets/git.org
+++ b/hammers/emacs/snippets/git.org
@@ -14,5 +14,5 @@
       # name: type
       # key: type
       # --
-      ${1:$$(yas-choose-value '("feat" "fix" "docs" "style" "refactor" "test" "chore"))} $0
+      ${1:$$(yas-choose-value '("feat" "fix" "docs" "style" "refactor" "test" "chore"))}($2): $0
     #+END_SRC
