--- a/hammers/zsh/rc.org
+++ b/hammers/zsh/rc.org
@@ -13,6 +13,7 @@
     #+BEGIN_SRC shell :tangle (tangle-if-absent "${m/home.d}/.zshenv") :eval never :exports code :comments link
       export LANG=en_US.UTF-8
       export JAVA_HOME="/Library/Java/JavaVirtualMachines/openjdk-13.0.1.jdk/Contents/Home"
+      export EDITOR=vim
     #+END_SRC
 
 *** zshrc 配置
