--- a/hammers/tmux/tmux.org
+++ b/hammers/tmux/tmux.org
@@ -18,9 +18,9 @@
 
       # set color of active pane
       set -g status-keys emacs
-      set -g status off
+      set -g status on
       # default hide the pane border status
-      set -g pane-border-status off
+      set -g pane-border-status top
       set -g base-index 1
       setw -g pane-base-index 1
       set -g renumber-windows on
