--- a/hammers/emacs/bootstrap.org
+++ b/hammers/emacs/bootstrap.org
@@ -28,8 +28,8 @@
 
 ** 系统配置
 
-   #+HEADER: :var conf.d=(or (and (boundp 'm/conf.d) (file-directory-p m/conf.d) m/conf.d) (expand-file-name user-emacs-directory))
-   #+HEADER: :var home.d=(or (and (boundp 'm/home.d) (file-directory-p m/home.d) m/home.d) (expand-file-name "~"))
+   #+HEADER: :var conf.d=(or (and (boundp 'm/conf.d) (file-directory-p m/conf.d) m/conf.d) (directory-file-name (expand-file-name user-emacs-directory)))
+   #+HEADER: :var home.d=(or (and (boundp 'm/home.d) (file-directory-p m/home.d) m/home.d) (directory-file-name (expand-file-name "~")))
    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/init.el") :comments link
      (defconst m/os
        (let ((os (symbol-name system-type)))
