feat: tangle with prompt for user specific variable

--- a/hammers/emacs/common.org
+++ b/hammers/emacs/common.org
@@ -23,7 +23,7 @@
 	     (m/resolve
 	      (concat (substring path 0 s) (m/var (match-string 1 path)) (substring path e))))))
        )
-     
+
      (defun m/files (glob &optional full)
        "Give an GLOB, return files matched GLOB.  If FULL is specified, return absolute pathnames for each file."
        (interactive "M")
@@ -33,17 +33,25 @@
 			      full
 			      (eshell-glob-regexp (file-name-nondirectory resolved)))
 	   (error '()))))
-     
+
      (defun m/var (name)
        "Return value of variable or environment identified by NAME."
        (or (getenv name) (eval (read name))))
-     
+
      (defun tangle-if-absent (path)
        (let* ((filename (m/resolve path)))
 	 (if (file-exists-p filename)
 	     "no"
 	   filename)))
-     
+   #+END_SRC
+
+** 系统调用
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-common.el") :comments link
+     (defun m/system (program &rest args)
+       "Run PROGRAM with ARGS and return the exit code and output in a list."
+       (with-temp-buffer 
+	 (list (apply 'call-process program nil (current-buffer) nil args)
+	       (buffer-string))))
    #+END_SRC
 
 ** 交互设置
