--- a/hammers/zsh/rc.org
+++ b/hammers/zsh/rc.org
@@ -37,6 +37,8 @@
       for file in ~/.zsh/post/*.zsh; do
 	  source "${file}"
       done
+
+      mux start misc
     #+END_SRC
 
     #+BEGIN_SRC shell :tangle (m/resolve "${m/home.d}/.zsh/init/python.zsh") :eval never :exports code :comments link
