feat(emacs): add powershell mode

--- a/hammers/emacs/languages.org
+++ b/hammers/emacs/languages.org
@@ -211,6 +211,11 @@
     #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-languages.el") :comments link
       (use-package vimrc-mode)
     #+END_SRC
+
+*** powershell mode
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-languages.el") :comments link
+      (use-package powershell)
+    #+END_SRC
 *** provide
     #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-languages.el") :comments link
       (provide 'init-languages)
